# black-hole-laboratory

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  amplify.yml  flake.nix  package-lock.json  package.json  shell.nix
renderer/: Cargo.toml
renderer/.cargo/: config.toml
renderer/shaders/: render.wgsl
renderer/src/: camera.rs  geometry.rs  lib.rs  main.rs  profiler.rs  shader.wgsl  texture.rs
simulation/src/: lib.rs
www/: bootstrap.js  index.html  package.json  style.css  webpack.config.js
