[workspace]
resolver = "2"
members = [
    "renderer",
    "simulation",
]
default-members = ["renderer"]

# Custom profile for development with debug info (for profiling)
[profile.dev-release]
inherits = "release"
debug = 2  # Enable DWARF full debug info for flame graphs

# Production profile without debug info (smaller binary size)
[profile.release]
debug = false
